--- a/index.html
+++ b/index.html
@@ -3,7 +3,6 @@
 <head>
   <meta charset="UTF-8" />
   <title>K.ARTS ログイン</title>
-  <!-- スマホ用表示 -->
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
     * { box-sizing: border-box; }
@@ -13,11 +12,7 @@
       background: #f3f4f6;
       color: #111827;
     }
-    #app {
-      max-width: 900px;
-      margin: 0 auto;
-      padding: 16px 10px 32px;
-    }
+    #app { max-width: 900px; margin: 0 auto; padding: 16px 10px 32px; }
     .screen { display: none; }
     .screen.active { display: block; }
 
@@ -34,6 +29,7 @@
       margin-bottom: 20px;
       line-height: 1.6;
     }
+
     #login-form {
       max-width: 480px;
       margin: 0 auto;
@@ -42,219 +38,82 @@
       gap: 12px;
       font-size: 16px;
     }
-    label {
-      font-weight: 600;
-      margin-bottom: 4px;
+    label { font-weight: 600; margin-bottom: 4px; }
+    input, textarea {
+      width: 100%; padding: 10px 12px; font-size: 18px;
+      border-radius: 8px; border: 1px solid #d1d5db;
+      background: #fff; outline: none;
     }
-    input[type="text"],
-    input[type="number"],
-    textarea {
-      width: 100%;
-      padding: 10px 12px;
-      font-size: 18px;
-      border-radius: 8px;
-      border: 1px solid #d1d5db;
-      outline: none;
-      background: #ffffff;
-    }
-    input[type="text"]:focus,
-    input[type="number"]:focus,
-    textarea:focus {
+    input:focus, textarea:focus {
       border-color: #2563eb;
       box-shadow: 0 0 0 1px #2563eb20;
     }
-    textarea { resize: vertical; }
 
-    .hint { font-size: 13px; color: #6b7280; }
     .btn {
-      border: none;
-      border-radius: 999px;
-      padding: 10px 18px;
-      font-size: 18px;
-      font-weight: 600;
-      cursor: pointer;
+      border: none; border-radius: 999px; padding: 10px 18px;
+      font-size: 18px; font-weight: 600; cursor: pointer;
     }
-    .btn.primary { background: #2563eb; color: #ffffff; }
-    .btn.primary:hover { opacity: 0.9; }
-    .btn.secondary { background: #e5e7eb; color: #111827; }
-    .btn.secondary:hover { background: #d1d5db; }
-    .btn.small { font-size: 14px; padding: 6px 12px; }
+    .btn.primary { background: #2563eb; color: #fff; }
+    .btn.secondary { background: #e5e7eb; }
+    .btn.danger { background: #dc2626; color: #fff; }
+    .btn.small { padding: 6px 12px; font-size: 14px; }
     .btn.wide { width: 100%; }
 
-    .btn.danger,
-    .btn.danger:visited,
-    .btn.danger:active {
-      background: #dc2626;
-      color: #ffffff;
-    }
-    .btn.danger:hover {
-      opacity: 0.9;
-    }
-
     .error-message { color: #b91c1c; min-height: 1.2em; }
-    .info-message { color: #047857; min-height: 1.2em; font-size: 14px; margin-top: 8px; }
 
     .top-bar {
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      gap: 12px;
+      display: flex; justify-content: space-between; align-items: center;
       margin-bottom: 16px;
-      flex-wrap: wrap;
     }
-    .top-bar h2 { margin: 0; }
 
     .card {
-      background: #ffffff;
-      border-radius: 16px;
-      padding: 14px 14px 16px;
-      margin-bottom: 14px;
+      background: #fff; border-radius: 16px;
+      padding: 14px 14px 16px; margin-bottom: 14px;
       box-shadow: 0 4px 12px #0000000a;
     }
-    .card h3 { margin-top: 0; }
 
     .image-area {
-      border-radius: 16px;
-      border: 1px dashed #d1d5db;
-      background: #f9fafb;
-      padding: 12px;
-      min-height: 160px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
+      border-radius: 16px; border: 1px dashed #d1d5db;
+      background: #f9fafb; padding: 12px; min-height: 160px;
+      display: flex; align-items: center; justify-content: center;
       margin-bottom: 12px;
     }
-    .art-image {
-      max-width: 100%;
-      max-height: 280px;
-      border-radius: 12px;
-    }
-    .image-placeholder {
-      color: #9ca3af;
-      text-align: center;
-      padding: 24px 8px;
-    }
+    .art-image { max-width: 100%; max-height: 280px; border-radius: 12px; }
     .hidden { display: none; }
-
-    .file-label {
-      display: inline-block;
-      margin-top: 4px;
-      padding: 8px 14px;
-      border-radius: 999px;
-      border: 1px solid #9ca3af;
-      font-size: 14px;
-      cursor: pointer;
-    }
-    .file-label input { display: none; }
-
-    .note {
-      font-size: 12px;
-      color: #6b7280;
-      margin-top: 8px;
-    }
-
-    .char-counter {
-      text-align: right;
-      font-size: 12px;
-      color: #6b7280;
-      margin-top: 4px;
-    }
-    .form-row { margin-bottom: 12px; }
-
-    .chart { margin-top: 12px; }
-    .chart-row {
-      display: flex;
-      align-items: center;
-      margin-bottom: 6px;
-      font-size: 14px;
-    }
-    .chart-label { width: 80px; font-size: 13px; }
-    .chart-bar {
-      flex: 1;
-      height: 12px;
-      border-radius: 999px;
-      background: #e5e7eb;
-      overflow: hidden;
-    }
-    .chart-bar-fill {
-      height: 100%;
-      background: #2563eb;
-    }
-    .chart-value {
-      width: 40px;
-      text-align: right;
-      font-size: 12px;
-    }
-
-    #survey-list {
-      width: 100%;
-      overflow-x: auto;
-    }
-    #survey-list table {
-      width: 100%;
-      min-width: 420px;
-      border-collapse: collapse;
-      font-size: 14px;
-    }
-    #survey-list th,
-    #survey-list td {
-      border-bottom: 1px solid #e5e7eb;
-      padding: 6px 4px;
-    }
-    #survey-list th {
-      text-align: left;
-      background: #f9fafb;
-    }
-
-    @media (max-width: 640px) {
-      #app {
-        padding: 12px 10px 24px;
-      }
-      .brand { font-size: 34px; letter-spacing: 0.15em; }
-      .subtitle { font-size: 14px; }
-      input[type="text"],
-      input[type="number"],
-      textarea { font-size: 16px; }
-      .btn { font-size: 16px; }
-      .top-bar {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-      .chart-label { width: 70px; }
-    }
-
-    @media (max-width: 380px) {
-      .brand { font-size: 30px; letter-spacing: 0.12em; }
-    }
   </style>
 </head>
+
 <body>
   <div id="app">
-    <!-- ログイン画面 -->
+
+    <!-- ================= ログイン画面 ================= -->
     <section id="login-screen" class="screen active">
       <h1 class="brand">K.ARTS</h1>
+
       <p class="subtitle">
-        缶ケースに書いてあるログインコードを入力してください<br />
-        例） B00001
+        缶ケースに書いてあるログインコードを入力してください<br>
+        例） B00001<br><br>
+
+        ● **M00001 / E00001 の方 → パスワード「1221」が必要**<br>
+        ● **B00001 の方 → パスワード不要**
       </p>
 
       <form id="login-form">
         <label for="login-code">ログインコード（アルファベット1文字 + 5桁数字）</label>
-        <input
-          type="text"
-          id="login-code"
-          maxlength="6"
-          autocomplete="off"
-          placeholder="B00001 など"
-          required
-        />
+        <input id="login-code" type="text" maxlength="6" placeholder="M00001 / B00001 / E00001" required />
 
-        <button type="submit" class="btn primary">ログイン</button>
+        <label for="login-password">
+          パスワード（4桁）
+          <span class="hint">※M / E の方のみ「1221」</span>
+        </label>
+        <input id="login-password" type="password" maxlength="4" inputmode="numeric" placeholder="1221" />
+
+        <button class="btn primary" type="submit">ログイン</button>
         <p id="login-error" class="error-message"></p>
       </form>
     </section>
 
-    <!-- A / B 用 作品編集画面 -->
+    <!-- =============== 作品画面（M / B 共通） =============== -->
     <section id="art-screen" class="screen">
       <header class="top-bar">
         <h2 id="art-title"></h2>
@@ -263,43 +122,29 @@
 
       <div class="card">
         <h3>作品の写真</h3>
+
         <div class="image-area">
-          <img id="art-image-preview" alt="作品画像プレビュー" class="art-image hidden" />
-          <div id="art-image-placeholder" class="image-placeholder">
-            まだ画像が登録されていません
-          </div>
+          <img id="art-image-preview" class="art-image hidden" />
+          <div id="art-image-placeholder">まだ画像が登録されていません</div>
         </div>
 
-        <!-- 画像選択ボタン -->
         <label class="file-label">
           画像ファイルを選択
-          <input type="file" id="art-image-input" accept="image/*" />
+          <input id="art-image-input" type="file" accept="image/*" />
         </label>
 
-        <!-- ★ 画像削除ボタン（Cloudinary + Firestore 両方） -->
-        <div style="margin-top: 8px;">
-          <button id="delete-image" type="button" class="btn danger small">
-            画像を削除する
-          </button>
-        </div>
+        <button id="delete-image" type="button" class="btn danger small" style="margin-top:8px;">
+          画像を削除する
+        </button>
 
         <p class="note">
-          ※ ログインコードごとに1枚の画像がオンラインに保存されます。<br>
-          ※ 「画像を削除する」を押すと、このコードに紐づく画像が消えます。
+          ※ M / B コードごとに 1 枚の画像が保存されます。
         </p>
       </div>
 
       <div class="card">
-        <h3>作品への思い（0〜300文字）</h3>
-        <textarea
-          id="art-comment"
-          rows="5"
-          maxlength="300"
-          placeholder="この作品に込めた思いを書いてください。（0〜300文字）"
-        ></textarea>
-        <div class="char-counter">
-          <span id="art-comment-count">0</span>/300 文字
-        </div>
+        <h3>作品への思い</h3>
+        <textarea id="art-comment" maxlength="300" rows="5"></textarea>
       </div>
 
       <div class="card">
@@ -308,51 +153,27 @@
       </div>
     </section>
 
-    <!-- C 用 管理画面（アンケート） -->
+    <!-- =============== 管理画面（Eユーザー専用） =============== -->
     <section id="admin-screen" class="screen">
       <header class="top-bar">
-        <h2>管理画面（Cユーザー専用）</h2>
+        <h2>管理画面（Eユーザー専用）</h2>
         <button id="logout-admin" class="btn secondary small">ログアウト</button>
       </header>
 
       <div class="card">
-        <h3>アンケート結果の入力</h3>
+        <h3>アンケート入力</h3>
         <form id="survey-form">
-          <div class="form-row">
-            <label for="age">年齢</label>
-            <input type="number" id="age" min="0" max="120" placeholder="例）78" required />
-          </div>
-          <div class="form-row">
-            <label for="wallet">財布の中身（円）</label>
-            <input
-              type="number"
-              id="wallet"
-              min="0"
-              step="100"
-              placeholder="例）3000"
-              required
-            />
-          </div>
-          <div class="form-row">
-            <label for="free-comment">自由な意見</label>
-            <textarea
-              id="free-comment"
-              rows="3"
-              placeholder="ご自由にお書きください。"
-            ></textarea>
-          </div>
+          <label>年齢</label>
+          <input id="age" type="number" min="0" max="120" required />
 
-          <button type="submit" class="btn primary wide">アンケート結果を追加</button>
+          <label>財布の中身（円）</label>
+          <input id="wallet" type="number" min="0" step="100" required />
+
+          <label>自由な意見</label>
+          <textarea id="free-comment" rows="3"></textarea>
+
+          <button class="btn primary wide" type="submit">追加</button>
         </form>
-        <p id="survey-save-message" class="info-message"></p>
-      </div>
-
-      <div class="card">
-        <h3>アンケート集計（簡易グラフ）</h3>
-        <div id="survey-summary">
-          <p>まだアンケート結果がありません。</p>
-        </div>
-        <div id="age-chart" class="chart"></div>
       </div>
 
       <div class="card">
@@ -360,25 +181,17 @@
         <div id="survey-list"></div>
       </div>
 
-      <div class="card">
-        <h3>アンケートのリセット</h3>
-        <p class="note">
-          このボタンを押すと、保存されているアンケート結果がすべて削除されます。<br>
-          （元に戻すことはできません）
-        </p>
-        <button id="reset-survey" class="btn danger wide">アンケートを全て削除</button>
-        <p id="survey-reset-message" class="info-message"></p>
-      </div>
+      <button id="reset-survey" class="btn danger wide">全削除</button>
+      <p id="survey-reset-message" class="info-message"></p>
     </section>
+
   </div>
 
-  <!-- Firebase SDK -->
+  <!-- Firebase -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
-
-  <!-- 自分の設定用スクリプト & メイン処理 -->
-  <!-- firebase-config.js の中で firebase.initializeApp(...) と db = firebase.firestore() をしておく -->
   <script src="firebase-config.js"></script>
   <script src="main.js"></script>
+
 </body>
 </html>
