--- a/index.html
+++ b/index.html
@@ -12,7 +12,11 @@
       background: #f3f4f6;
       color: #111827;
     }
-    #app { max-width: 900px; margin: 0 auto; padding: 16px 10px 32px; }
+    #app {
+      max-width: 900px;
+      margin: 0 auto;
+      padding: 16px 10px 32px;
+    }
     .screen { display: none; }
     .screen.active { display: block; }
 
@@ -38,82 +42,154 @@
       gap: 12px;
       font-size: 16px;
     }
+
     label { font-weight: 600; margin-bottom: 4px; }
-    input, textarea {
-      width: 100%; padding: 10px 12px; font-size: 18px;
-      border-radius: 8px; border: 1px solid #d1d5db;
-      background: #fff; outline: none;
+
+    input[type="text"],
+    input[type="password"],
+    input[type="number"],
+    textarea {
+      width: 100%;
+      padding: 10px 12px;
+      font-size: 18px;
+      border-radius: 8px;
+      border: 1px solid #d1d5db;
+      outline: none;
+      background: #ffffff;
     }
-    input:focus, textarea:focus {
+    input:focus {
       border-color: #2563eb;
       box-shadow: 0 0 0 1px #2563eb20;
     }
 
+    textarea { resize: vertical; }
+
     .btn {
-      border: none; border-radius: 999px; padding: 10px 18px;
-      font-size: 18px; font-weight: 600; cursor: pointer;
+      border: none;
+      border-radius: 999px;
+      padding: 10px 18px;
+      font-size: 18px;
+      font-weight: 600;
+      cursor: pointer;
     }
-    .btn.primary { background: #2563eb; color: #fff; }
-    .btn.secondary { background: #e5e7eb; }
-    .btn.danger { background: #dc2626; color: #fff; }
-    .btn.small { padding: 6px 12px; font-size: 14px; }
+    .btn.primary { background: #2563eb; color: #ffffff; }
+    .btn.primary:hover { opacity: 0.9; }
+    .btn.secondary { background: #e5e7eb; color: #111827; }
+    .btn.secondary:hover { background: #d1d5db; }
+    .btn.small { font-size: 14px; padding: 6px 12px; }
     .btn.wide { width: 100%; }
+    .btn.danger { background: #dc2626; color: #fff; }
 
     .error-message { color: #b91c1c; min-height: 1.2em; }
+    .info-message { color: #047857; min-height: 1.2em; font-size: 14px; margin-top: 8px; }
 
     .top-bar {
-      display: flex; justify-content: space-between; align-items: center;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      gap: 12px;
       margin-bottom: 16px;
+      flex-wrap: wrap;
     }
 
     .card {
-      background: #fff; border-radius: 16px;
-      padding: 14px 14px 16px; margin-bottom: 14px;
+      background: #ffffff;
+      border-radius: 16px;
+      padding: 14px 14px 16px;
+      margin-bottom: 14px;
       box-shadow: 0 4px 12px #0000000a;
     }
 
     .image-area {
-      border-radius: 16px; border: 1px dashed #d1d5db;
-      background: #f9fafb; padding: 12px; min-height: 160px;
-      display: flex; align-items: center; justify-content: center;
+      border-radius: 16px;
+      border: 1px dashed #d1d5db;
+      background: #f9fafb;
+      padding: 12px;
+      min-height: 160px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
       margin-bottom: 12px;
     }
-    .art-image { max-width: 100%; max-height: 280px; border-radius: 12px; }
+    .art-image {
+      max-width: 100%;
+      max-height: 280px;
+      border-radius: 12px;
+    }
+    .image-placeholder {
+      color: #9ca3af;
+      text-align: center;
+      padding: 24px 8px;
+    }
     .hidden { display: none; }
+
+    .file-label {
+      display: inline-block;
+      margin-top: 4px;
+      padding: 8px 14px;
+      border-radius: 999px;
+      border: 1px solid #9ca3af;
+      font-size: 14px;
+      cursor: pointer;
+    }
+    .file-label input { display: none; }
+
+    .char-counter {
+      text-align: right;
+      font-size: 12px;
+      color: #6b7280;
+      margin-top: 4px;
+    }
+
+    @media (max-width: 640px) {
+      #app { padding: 12px 10px 24px; }
+      .brand { font-size: 34px; }
+      .subtitle { font-size: 14px; }
+      .btn { font-size: 16px; }
+    }
   </style>
 </head>
 
 <body>
   <div id="app">
 
-    <!-- ================= ログイン画面 ================= -->
+    <!-- ▼▼▼ ログイン画面 ▼▼▼ -->
     <section id="login-screen" class="screen active">
       <h1 class="brand">K.ARTS</h1>
-
       <p class="subtitle">
         缶ケースに書いてあるログインコードを入力してください<br>
-        例） B00001<br><br>
-
-        ● **M00001 / E00001 の方 → パスワード「1221」が必要**<br>
-        ● **B00001 の方 → パスワード不要**
+        例） B00001
       </p>
 
       <form id="login-form">
+
+        <!-- ログインコード -->
         <label for="login-code">ログインコード（アルファベット1文字 + 5桁数字）</label>
-        <input id="login-code" type="text" maxlength="6" placeholder="M00001 / B00001 / E00001" required />
+        <input
+          type="text"
+          id="login-code"
+          maxlength="6"
+          placeholder="B00001 など"
+          autocomplete="off"
+          required
+        />
 
-        <label for="login-password">
-          パスワード（4桁）
-          <span class="hint">※M / E の方のみ「1221」</span>
-        </label>
-        <input id="login-password" type="password" maxlength="4" inputmode="numeric" placeholder="1221" />
+        <!-- ★ M / E だけが必要なパスワード欄（B は無視してログインできる） -->
+        <label for="login-password">パスワード（M/E のみ 1221）</label>
+        <input
+          type="password"
+          id="login-password"
+          maxlength="4"
+          placeholder="1221"
+          autocomplete="off"
+        />
 
-        <button class="btn primary" type="submit">ログイン</button>
+        <button type="submit" class="btn primary">ログイン</button>
         <p id="login-error" class="error-message"></p>
       </form>
     </section>
 
-    <!-- =============== 作品画面（M / B 共通） =============== -->
+    <!-- ▼▼▼ A/B → M/B 作品画面 ▼▼▼ -->
     <section id="art-screen" class="screen">
       <header class="top-bar">
         <h2 id="art-title"></h2>
@@ -125,26 +201,28 @@
 
         <div class="image-area">
           <img id="art-image-preview" class="art-image hidden" />
-          <div id="art-image-placeholder">まだ画像が登録されていません</div>
+          <div id="art-image-placeholder" class="image-placeholder">
+            まだ画像が登録されていません
+          </div>
         </div>
 
         <label class="file-label">
           画像ファイルを選択
-          <input id="art-image-input" type="file" accept="image/*" />
+          <input type="file" id="art-image-input" accept="image/*" />
         </label>
 
-        <button id="delete-image" type="button" class="btn danger small" style="margin-top:8px;">
-          画像を削除する
-        </button>
+        <div style="margin-top: 8px;">
+          <button id="delete-image" class="btn danger small">画像を削除する</button>
+        </div>
 
-        <p class="note">
-          ※ M / B コードごとに 1 枚の画像が保存されます。
-        </p>
       </div>
 
       <div class="card">
-        <h3>作品への思い</h3>
-        <textarea id="art-comment" maxlength="300" rows="5"></textarea>
+        <h3>作品への思い（0〜300文字）</h3>
+        <textarea id="art-comment" rows="5" maxlength="300"></textarea>
+        <div class="char-counter">
+          <span id="art-comment-count">0</span>/300 文字
+        </div>
       </div>
 
       <div class="card">
@@ -153,7 +231,7 @@
       </div>
     </section>
 
-    <!-- =============== 管理画面（Eユーザー専用） =============== -->
+    <!-- ▼▼▼ E → 管理画面 ▼▼▼ -->
     <section id="admin-screen" class="screen">
       <header class="top-bar">
         <h2>管理画面（Eユーザー専用）</h2>
@@ -161,7 +239,7 @@
       </header>
 
       <div class="card">
-        <h3>アンケート入力</h3>
+        <h3>アンケート結果の入力</h3>
         <form id="survey-form">
           <label>年齢</label>
           <input id="age" type="number" min="0" max="120" required />
@@ -174,6 +252,13 @@
 
           <button class="btn primary wide" type="submit">追加</button>
         </form>
+        <p id="survey-save-message" class="info-message"></p>
+      </div>
+
+      <div class="card">
+        <h3>アンケート集計</h3>
+        <div id="survey-summary"></div>
+        <div id="age-chart"></div>
       </div>
 
       <div class="card">
@@ -181,17 +266,21 @@
         <div id="survey-list"></div>
       </div>
 
-      <button id="reset-survey" class="btn danger wide">全削除</button>
-      <p id="survey-reset-message" class="info-message"></p>
+      <div class="card">
+        <h3>アンケートのリセット</h3>
+        <button id="reset-survey" class="btn danger wide">全削除</button>
+        <p id="survey-reset-message" class="info-message"></p>
+      </div>
     </section>
 
   </div>
 
-  <!-- Firebase -->
+  <!-- Firebase SDK -->
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-app-compat.js"></script>
   <script src="https://www.gstatic.com/firebasejs/9.22.2/firebase-firestore-compat.js"></script>
+
+  <!-- 自作スクリプト -->
   <script src="firebase-config.js"></script>
   <script src="main.js"></script>
-
 </body>
 </html>
