--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         />
 
         <!-- ★ M / E だけが必要なパスワード欄（B は無視してログインできる） -->
-        <label for="login-password">パスワード（M/E のみ 1221）</label>
+        <label for="login-password">パスワード</label>
         <input
           type="password"
           id="login-password"
